--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
+    "@types/yandex-maps": "^2.1.20",
     "antd": "^4.16.13",
     "apexcharts": "^3.30.0",
     "react": "^17.0.2",
@@ -18,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-yandex-maps": "^4.6.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
