--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-scripts": "4.0.3",
     "react-yandex-maps": "^4.6.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "write-json-file": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
